force-app/main/default/objects/Order/fields/Invoice_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total_Amount__c</fullName>
    <description>This field calculates the total amount including the copay to be displayed on the invoice</description>
    <formula>Invoice_Gross_Price__c + Invoice_Insurant_Copay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>