force-app/main/default/objects/Order/fields/Is_Cash_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Cash_Order__c</fullName>
    <description>This field will track if an order is a cash order or an insurance order.</description>
    <formula>IF( AND( BEGINS( TEXT(Type), &apos;DE&apos;), 
	OR(
		ISBLANK(OpportunityId),
		Opportunity.Cash_Pay__c = TRUE
	)), TRUE, FALSE
)</formula>
    <label>Is Cash Order?</label>
    <type>Checkbox</type>
</CustomField>