force-app/main/default/objects/Order/fields/Is_Non_Activated_Return_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Activated_Return_Order__c</fullName>
    <description>Flags the Return Order, which are not activated. Used in Lightning Page filters.</description>
    <formula>IF(
AND (Parent_Order__c != Null,  
ISBLANK( ActivatedDate ),
CONTAINS( Text(Type), &apos;RETURN&apos; )
)
, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Non Activated Return Order</label>
    <type>Checkbox</type>
</CustomField>