force-app/main/default/objects/Order/fields/Latest_G6_Transmitter_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_G6_Transmitter_Ship_Date__c</fullName>
    <label>Latest G6 Transmitter Ship Date</label>
    <summarizedField>OrderItem.Actual_Ship_Date__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>STT-GS-003, STT-GS-006</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>