force-app/main/default/objects/Order/fields/Letter_of_Acknowledgement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Acknowledgement_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Jagan 12/10/2017 - Added this field to track if Letter of acknowledgement was sent.</description>
    <label>Letter of Acknowledgement Sent</label>
    <type>Checkbox</type>
</CustomField>