force-app/main/default/objects/Order/fields/Letter_of_Acknowledgement_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Acknowledgement_Sent_Date__c</fullName>
    <description>Jjagan 12/10/2017 - Date tracks when the Letter of acknowledgement was sent.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Letter of Acknowledgement Sent Date</label>
    <type>Date</type>
</CustomField>