force-app/main/default/objects/Order/fields/Medical_Advice_Number_Products_Total_Amt__c.field-meta.xml
<CustomField>
    <fullName>Medical_Advice_Number_Products_Total_Amt__c</fullName>
    <description>Rolls up the total price amount of the products, which have the flag Is_Medical_Advice_Numbered_Product__c set</description>
    <label>Medical Advice Number Products Total Amt</label>
    <summarizedField>OrderItem.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.UnitPrice</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>