force-app/main/default/objects/Order/fields/Memo_Date__c.field-meta.xml
<CustomField>
    <fullName>Memo_Date__c</fullName>
    <description>NS-1499</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Memo Date</label>
    <type>Date</type>
</CustomField>