force-app/main/default/objects/Order/fields/Memo_Number__c.field-meta.xml
<CustomField>
    <fullName>Memo_Number__c</fullName>
    <description>NS-1499</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Memo Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>