force-app/main/default/objects/Order/fields/Need_To_Calculate_Tax__c.field-meta.xml
<CustomField>
    <fullName>Need_To_Calculate_Tax__c</fullName>
    <label>Need To Calculate Tax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>