force-app/main/default/objects/Order/fields/New_VAT__c.field-meta.xml
<CustomField>
    <fullName>New_VAT__c</fullName>
    <formula>IF (BEGINS(RecordType.DeveloperName, &apos;DE&apos;),
    IF(
        AND(EffectiveDate &gt;= DATE(2020,7,1),
            EffectiveDate  &lt;= DATE(2020,12,31)),
    Invoice_Net_Price__c *0.16,
    Invoice_Net_Price__c *0.19),0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>