force-app/main/default/objects/Order/fields/Non_Cancelled_Order_Line_Amt__c.field-meta.xml
<CustomField>
    <fullName>Non_Cancelled_Order_Line_Amt__c</fullName>
    <description>Total of Order Lines Qty * Unit Price with Non-Cancelled Status.</description>
    <label>Non Cancelled Order Line Amt</label>
    <summarizedField>OrderItem.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Status__c</field>
        <operation>notEqual</operation>
        <value>CANCELED, CANCELLED</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>