force-app/main/default/objects/Order/fields/Num_Of_Return_Products__c.field-meta.xml
<CustomField>
    <fullName>Num_Of_Return_Products__c</fullName>
    <description>Field counts the number of return products and will do a check for DE TECH RETURN order type. For this order type we need atleast one Return Product.</description>
    <label>Num Of Return Products</label>
    <summaryFilterItems>
        <field>OrderItem.Is_Return_Item__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>