force-app/main/default/objects/Order/fields/OMS_Action__c.field-meta.xml
<CustomField>
    <fullName>OMS_Action__c</fullName>
    <label>OMS Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>placeInvoiceHold</fullName>
            </value>
            <value>
                <fullName>releaseInvoiceHold</fullName>
            </value>
            <value>
                <fullName>chargeShippingAmount</fullName>
            </value>
            <value>
                <fullName>applyRefund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>