force-app/main/default/objects/Order/fields/OMS_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>OMS_Order_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>OMS Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>