force-app/main/default/objects/Order/fields/Oracle_Account_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Account_Customer_Id__c</fullName>
    <formula>Account.Customer_Id__c</formula>
    <label>Oracle Account Customer Id</label>
    <type>Text</type>
</CustomField>