force-app/main/default/objects/Order/fields/Oracle_Payor_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Payor_Customer_Id__c</fullName>
    <formula>Payor__r.Customer_Id__c</formula>
    <label>Oracle Payor Customer Id</label>
    <type>Text</type>
</CustomField>