force-app/main/default/objects/Order/fields/Oracle_Shipping_Party_Site_Use_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Shipping_Party_Site_Use_Id__c</fullName>
    <formula>Customer_Ship_To_Address__r.Oracle_Party_Site_Id__c</formula>
    <label>Oracle Shipping Party Site Use Id</label>
    <type>Text</type>
</CustomField>