force-app/main/default/objects/Order/fields/Order_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_18_Digit_Id__c</fullName>
    <description>18 digit id for Order</description>
    <formula>CASESAFEID(Id)</formula>
    <label>Order 18 Digit Id</label>
    <type>Text</type>
</CustomField>