force-app/main/default/objects/Order/fields/Order_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Account_Type__c</fullName>
    <formula>Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Account Type</label>
    <type>Text</type>
</CustomField>