force-app/main/default/objects/Order/fields/Order_Amt_Less_Shipping_Charges__c.field-meta.xml
<CustomField>
    <fullName>Order_Amt_Less_Shipping_Charges__c</fullName>
    <description>This field tracks Order amount without Shipping Charges</description>
    <formula>IF(ISBLANK(Shipping_Charges__c), TotalAmount, (TotalAmount -  Shipping_Charges__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Amt Less Shipping Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>