force-app/main/default/objects/Order/fields/Order_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Order_Cancellation_Reason__c</fullName>
    <label>Order Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compatibility - Mobile Device</fullName>
            </value>
            <value>
                <fullName>Compatibility - Other</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Cancelled in Fusion</fullName>
            </value>
            <value>
                <fullName>Duplicate Account</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
            </value>
            <value>
                <fullName>Invalid Contact Info</fullName>
            </value>
            <value>
                <fullName>Non-responsive</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Not Type 1</fullName>
            </value>
            <value>
                <fullName>Opportunity Created in Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pricing - Cash Price Too High</fullName>
            </value>
            <value>
                <fullName>Pricing - Competition</fullName>
            </value>
            <value>
                <fullName>Pricing - No INS Coverage</fullName>
            </value>
            <value>
                <fullName>Pricing - OOP Too High</fullName>
            </value>
            <value>
                <fullName>Product Design or Features</fullName>
            </value>
            <value>
                <fullName>Resides Outside Country</fullName>
            </value>
            <value>
                <fullName>Request From ISR</fullName>
            </value>
            <value>
                <fullName>Request From Tech Support</fullName>
            </value>
            <value>
                <fullName>Missing Docs - Unable to Invoice</fullName>
            </value>
            <value>
                <fullName>Order Entry Error</fullName>
            </value>
            <value>
                <fullName>Order Duplicated</fullName>
            </value>
            <value>
                <fullName>No Longer Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>