force-app/main/default/objects/Order/fields/Order_Confirmation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Confirmation Email Sent</label>
    <type>Checkbox</type>
</CustomField>