force-app/main/default/objects/Order/fields/Order_Send_to_EBS_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Send_to_EBS_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Send to EBS Date</label>
    <type>Date</type>
</CustomField>