force-app/main/default/objects/Order/fields/Order_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Sub_Type__c</fullName>
    <description>This field is used for online webstore</description>
    <label>Order Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Store</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cash - Prepaid</fullName>
            </value>
            <value>
                <fullName>Funded - Single</fullName>
            </value>
            <value>
                <fullName>Funded - Multiple</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>