force-app/main/default/objects/Order/fields/Pay_Pal_Id__c.field-meta.xml
<CustomField>
    <fullName>Pay_Pal_Id__c</fullName>
    <description>This field stores the reference to the Pay pal transaction for the Order.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Pal Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>