force-app/main/default/objects/Order/fields/Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>