force-app/main/default/objects/Order/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>creditCard</fullName>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>directDebit</fullName>
                <label>Direct Debit</label>
            </value>
            <value>
                <fullName>bankTransfer</fullName>
                <label>Bank Transfer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>