force-app/main/default/objects/Order/fields/Payment_Shipment_Info_Exist__c.field-meta.xml
<CustomField>
    <fullName>Payment_Shipment_Info_Exist__c</fullName>
    <description>If Order has Shipping SKU, Shippable items, Virtual items or just Shippable items, Virtual items then this field will return True else, it will be returned as False.</description>
    <formula>IF(AND(Count_Of_Shipping_SKU__c = 0, Count_of_Order_Line_Items__c &gt; 0, Count_of_Virtual_SKUs__c &gt; 0, Count_of_Order_Line_Items__c &gt; Count_of_Virtual_SKUs__c), true,
IF(AND(Count_Of_Shipping_SKU__c &gt; 0, Count_of_Order_Line_Items__c &gt; 0, Count_of_Virtual_SKUs__c &gt; 0, Count_of_Order_Line_Items__c &gt; (Count_of_Virtual_SKUs__c + Count_Of_Shipping_SKU__c)
), true, false))</formula>
    <label>Payment Shipment Info Exist</label>
    <type>Checkbox</type>
</CustomField>