force-app/main/default/objects/Order/fields/Payor_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Payor_Party_Id__c</fullName>
    <formula>Payor__r.Party_Id__c</formula>
    <label>Payor Party Id</label>
    <type>Text</type>
</CustomField>