force-app/main/default/objects/Order/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <formula>TEXT(Account.Preferred_Language__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Language</label>
    <type>Text</type>
</CustomField>