force-app/main/default/objects/Order/fields/QA_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>QA_Failure_Reason__c</fullName>
    <description>This field stores QA failure reasons. This field is moved from Opportunity object.</description>
    <label>QA Failure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Double Delivery</fullName>
            </value>
            <value>
                <fullName>GKK Missing</fullName>
            </value>
            <value>
                <fullName>Holding Pattern</fullName>
            </value>
            <value>
                <fullName>Missing Additional Payment</fullName>
            </value>
            <value>
                <fullName>Other (Note Required)</fullName>
            </value>
            <value>
                <fullName>O-VO Missing</fullName>
            </value>
            <value>
                <fullName>Receipt Confirmation Missing</fullName>
            </value>
            <value>
                <fullName>Shipping Costs Instead of Additional Payment</fullName>
            </value>
            <value>
                <fullName>Shortage</fullName>
            </value>
            <value>
                <fullName>TechEW Missing</fullName>
            </value>
            <value>
                <fullName>Wrong Additional Payment</fullName>
            </value>
            <value>
                <fullName>Wrong Prices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>