force-app/main/default/objects/Order/fields/QR_Bill_Generated__c.field-meta.xml
<CustomField>
    <fullName>QR_Bill_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QR Bill Generated</label>
    <type>Checkbox</type>
</CustomField>