force-app/main/default/objects/Order/fields/QR_Bill_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>QR_Bill_Payment_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QR Bill Payment Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>