force-app/main/default/objects/Order/fields/Reasons_For_Sample_Orders__c.field-meta.xml
<CustomField>
    <fullName>Reasons_For_Sample_Orders__c</fullName>
    <description>This is a dependent picklist of Order Type. Required for DE SAMPLE orders</description>
    <label>Reasons For Sample Orders</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>$G6 Transition</fullName>
            </value>
            <value>
                <fullName>48/52</fullName>
            </value>
            <value>
                <fullName>Field Service Equipment</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Internal Processing Error: Compilation</fullName>
            </value>
            <value>
                <fullName>Internal Processing Error: G4 / G5 / G6</fullName>
            </value>
            <value>
                <fullName>Internal Processing Error: mg / mmol</fullName>
            </value>
            <value>
                <fullName>Internal Processing Error: Quantity</fullName>
            </value>
            <value>
                <fullName>Margin</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Office Stock</fullName>
            </value>
            <value>
                <fullName>Other (Note Required)</fullName>
            </value>
            <value>
                <fullName>Rental Systems</fullName>
            </value>
            <value>
                <fullName>Ship Correction</fullName>
            </value>
            <value>
                <fullName>TM Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>