force-app/main/default/objects/Order/fields/Recent_Transmitter_Generation_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Transmitter_Generation_Ship_Date__c</fullName>
    <formula>IF(
NOT(ISBLANK(Latest_G6_Transmitter_Ship_Date__c)),
Latest_G6_Transmitter_Ship_Date__c,
IF(NOT(ISBLANK(Latest_G5_Transmitter_Ship_Date__c)), Latest_G5_Transmitter_Ship_Date__c, Latest_G4_Transmitter_Ship_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recent Transmitter Generation Ship Date</label>
    <type>Date</type>
</CustomField>