force-app/main/default/objects/Order/fields/Recent_Transmitter_Generation_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Recent_Transmitter_Generation_Shipped__c</fullName>
    <formula>IF( 
NOT(ISBLANK(Latest_G6_Transmitter_Ship_Date__c)), 
&quot;G6&quot;, 
IF(NOT(ISBLANK(Latest_G5_Transmitter_Ship_Date__c)), &quot;G5&quot;, &quot;G4&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recent Transmitter Generation Shipped</label>
    <type>Text</type>
</CustomField>