force-app/main/default/objects/Order/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <description>The Amount that is refunded (for Credit Orders or Cancelled Orders).</description>
    <label>Refund Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>