force-app/main/default/objects/Order/fields/Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Date__c</fullName>
    <description>Date on which Refund was processed (for Credit Orders or Cancelled Orders).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Refund Date</label>
    <type>DateTime</type>
</CustomField>