force-app/main/default/objects/Order/fields/Refund_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reference_Number__c</fullName>
    <description>The Reference number of the refund (for Credit Orders or Cancelled Orders).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Refund Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>