force-app/main/default/objects/Order/fields/Rejected_by_insurance__c.field-meta.xml
<CustomField>
    <fullName>Rejected_by_insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected By Insurance</label>
    <type>Checkbox</type>
</CustomField>