force-app/main/default/objects/Order/fields/Report_Shipping_Charges__c.field-meta.xml
<CustomField>
    <fullName>Report_Shipping_Charges__c</fullName>
    <description>Used for reporting purpose.</description>
    <formula>IF(BEGINS(TEXT(Type), &apos;DIST&apos;), Shipping_Charges__c, Final_Shipping_Charge__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Shipping Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>