force-app/main/default/objects/Order/fields/Report_VAT__c.field-meta.xml
<CustomField>
    <fullName>Report_VAT__c</fullName>
    <description>Used for reporting purpose.</description>
    <formula>IF(BEGINS(RecordType.DeveloperName, &apos;DE&apos;), Tax__c, VAT_TAX__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>