force-app/main/default/objects/Order/fields/Revenue_Period__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Period__c</fullName>
    <description>Revenue Period of the Order. Mostly to be used with International Distributor Orders.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Revenue Period</label>
    <type>Date</type>
</CustomField>