force-app/main/default/objects/Order/fields/RGA_Barcode__c.field-meta.xml
<CustomField>
    <fullName>RGA_Barcode__c</fullName>
    <description>Invoke the service to convert the RGA number to Barcode</description>
    <formula>If(ISBLANK(Display_RGA_Number__c), &apos;&apos;, IMAGE(&quot;//www.barcodesinc.com/generator/image.php?code=&quot;&amp;Display_RGA_Number__c&amp;&quot;&amp;style=325&amp;type=C128B&amp;width=200&amp;height=50&amp;xres=1&amp;font=3&quot;,Display_RGA_Number__c)
)</formula>
    <label>RGA Barcode</label>
    <type>Text</type>
</CustomField>