force-app/main/default/objects/Order/fields/RGA_Number__c.field-meta.xml
<CustomField>
    <fullName>RGA_Number__c</fullName>
    <description>Auto Number tracks the RGA number</description>
    <displayFormat>RG-{00000000}</displayFormat>
    <label>RGA Number</label>
    <type>AutoNumber</type>
</CustomField>