force-app/main/default/objects/Order/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>