force-app/main/default/objects/Order/fields/SDoc_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>SDoc_Invoice_Email__c</fullName>
    <formula>IF(NOT(ISBLANK(Fund__r.Invoice_Email__c)),Fund__r.Invoice_Email__c,
IF(NOT(ISBLANK(Invoice_Email__c)), Invoice_Email__c,
IF(NOT(ISBLANK(Payor__c)), Payor__r.Organzation_Email__c ,
IF(NOT(ISBLANK( AccountId )), Account.PersonContact.Email, &apos;&apos;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDoc Invoice Email</label>
    <type>Text</type>
</CustomField>