force-app/main/default/objects/Order/fields/Sent_to_Oracle_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Oracle_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sent to Oracle Date</label>
    <type>Date</type>
</CustomField>