force-app/main/default/objects/Order/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>