force-app/main/default/objects/Order/fields/Settlement_Error__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement Error</label>
    <length>250</length>
    <type>Text</type>
</CustomField>