force-app/main/default/objects/Order/fields/Settlement_Id__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>