force-app/main/default/objects/Order/fields/Shipment_Confirmation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Confirmation_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipment Confirmation Email Sent</label>
    <type>Checkbox</type>
</CustomField>