force-app/main/default/objects/Order/fields/Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date__c</fullName>
    <description>Max of the Line Items Shipping Dates</description>
    <label>Shipped Date</label>
    <summarizedField>OrderItem.Actual_Ship_Date__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>