force-app/main/default/objects/Order/fields/Shipping_Charge__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charge__c</fullName>
    <formula>CASE(TEXT(Shipping_Method__c),
&quot;Bestway|Ground|No Charge&quot;, 0,
&quot;Bestway|Air|Express 2-3 Day - No Charge&quot;, 0,
&quot;Bestway|Air|Express 2-3 Day - 19 Euro&quot;, 19,
&quot;Bestway|Air|Priority Overnight - 30 Euro&quot;, 30,
&quot;Bestway|Air|Priority Overnight - No Charge&quot;, 0,
&quot;000001_CADS_P_PO&quot;, 10, 
&quot;000001_CADS_P_CP&quot;, 10, 
&quot;000001_CADS_D_P3&quot;, 10, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>